--- a/style.css
+++ b/style.css
@@ -1,9 +1,28 @@
+@font-face {
+    font-family: 'chromateregular';
+    src: url('Images/chromate-regular-webfont.eot');
+    src: url('Images/chromate-regular-webfont.woff') format('woff'),
+         url('Images/chromate-regular-webfont.ttf') format('truetype'),
+         url('Images/chromate-regular-webfont.svg#chromateregular') format('svg');
+}
+
 .header-1 {
-  color: #43FF00 !important;
-  font-size: 72px !important;
-  font-family: "eskapade-fraktur", serif !important;
+  color: #ff8e8e !important;
+  font-size: 62px !important;
+  font-family: "chromateregular", serif !important;
   font-weight: 400 !important;
   font-style: normal;
+  line-height: 1.5;
+
+}
+
+.header-1-white {
+  color: #ffffff !important;
+  font-size: 62px !important;
+  font-family: "chromateregular", serif !important;
+  font-weight: 400 !important;
+  font-style: normal;
+  line-height: 1.5;
 
 }
 
@@ -13,6 +32,24 @@
   font-weight: 400 !important;
   font-style: normal;
   color: white;
+}
+
+.header-2-fun {
+  font-size: 40px !important;
+  font-family: "chromateregular", sans-serif !important;
+  font-weight: 400 !important;
+  font-style: normal;
+  color: white;
+  line-height: 1.5;
+}
+
+.header-2-fun-pink {
+  font-size: 40px !important;
+  font-family: "chromateregular", sans-serif !important;
+  font-weight: 400 !important;
+  font-style: normal;
+  color: #ff8e8e !important;
+  line-height: 1.5;
 }
 
 .header-3 {
@@ -40,24 +77,24 @@
 }
 
 .menu-link:hover {
-  color: #43FF00 !important;
+  color: #ff8e8e !important;
   font-style: italic !important;
 }
 
 .btn-primary {
-  background-color: #43FF00 !important;
+  background-color: #ff8e8e !important;
   outline: none !important;
   box-shadow: none !important;
   font-family: "poppins", sans-serif !important;
   font-weight: 500 !important;
   color: black !important;
   border-radius: 0px !important;
-  border-color: #43FF00 !important;
+  border-color: #ff8e8e !important;
 }
 
 .btn-primary:hover {
   background-color: black !important;
-  color: #43FF00 !important;
+  color: #ff8e8e !important;
 }
 
 .body-1 {
@@ -79,9 +116,18 @@
 .link {
   font-size: 17px !important;
   font-family: "poppins", sans-serif !important;
-  font-weight: 400 !important;
+  font-weight: 500 !important;
   font-style: normal !important;
-  color: #43FF00 !important;
+  color: #ff8e8e !important;
+  text-decoration: none;
+}
+
+.header-4-link {
+  font-size: 20px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 500 !important;
+  font-style: normal !important;
+  color: #ff8e8e !important;
   text-decoration: none;
 }
 
