--- a/style.css
+++ b/style.css
@@ -122,11 +122,29 @@
   text-decoration: none;
 }
 
+.link:hover {
+  font-size: 17px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 500 !important;
+  font-style: italic !important;
+  color: #ff8e8e !important;
+  text-decoration: none;
+}
+
 .header-4-link {
   font-size: 20px !important;
   font-family: "poppins", sans-serif !important;
   font-weight: 500 !important;
   font-style: normal !important;
+  color: #ff8e8e !important;
+  text-decoration: none;
+}
+
+.header-4-link:hover {
+  font-size: 20px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 500 !important;
+  font-style: italic !important;
   color: #ff8e8e !important;
   text-decoration: none;
 }
