--- a/style.css
+++ b/style.css
@@ -7,94 +7,13 @@
 }
 
 .header-1 {
-  color: #ff8e8e !important;
+  color: #000000 !important;
   font-size: 62px !important;
   font-family: "chromateregular", serif !important;
   font-weight: 400 !important;
   font-style: normal;
   line-height: 1.5;
 
-}
-
-.header-1-white {
-  color: #ffffff !important;
-  font-size: 62px !important;
-  font-family: "chromateregular", serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  line-height: 1.5;
-
-}
-
-.header-2 {
-  font-size: 36px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  color: white;
-}
-
-.header-2-fun {
-  font-size: 40px !important;
-  font-family: "chromateregular", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  color: white;
-  line-height: 1.5;
-}
-
-.header-2-fun-pink {
-  font-size: 40px !important;
-  font-family: "chromateregular", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  color: #ff8e8e !important;
-  line-height: 1.5;
-}
-
-.header-3 {
-  font-size: 27px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 300 !important;
-  font-style: normal;
-  color: white;
-}
-
-.header-4 {
-  font-size: 20px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  color: white !important;
-}
-
-.menu-link {
-  font-size: 20px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 400 !important;
-  font-style: normal;
-  color: white !important;
-}
-
-.menu-link:hover {
-  color: #ff8e8e !important;
-  font-style: italic !important;
-}
-
-.btn-primary {
-  background-color: #ff8e8e !important;
-  outline: none !important;
-  box-shadow: none !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 500 !important;
-  color: black !important;
-  border-radius: 0px !important;
-  border-color: #ff8e8e !important;
-}
-
-.btn-primary:hover {
-  background-color: black !important;
-  color: #ff8e8e !important;
 }
 
 .body-1 {
@@ -113,79 +32,27 @@
   color: #B8B8B8 !important;
 }
 
-.link {
-  font-size: 17px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 500 !important;
-  font-style: normal !important;
-  color: #ff8e8e !important;
-  text-decoration: none;
-}
-
-.link:hover {
-  font-size: 17px !important;
-  font-family: "poppins", sans-serif !important;
-  font-weight: 500 !important;
-  font-style: italic !important;
-  color: #ff8e8e !important;
-  text-decoration: none;
-}
-
-.header-4-link {
+.menu-link {
   font-size: 20px !important;
   font-family: "poppins", sans-serif !important;
-  font-weight: 500 !important;
-  font-style: normal !important;
-  color: #ff8e8e !important;
-  text-decoration: none;
+  font-weight: 400 !important;
+  font-style: normal;
+  color: #000000 !important;
+  text-decoration: none !important;
+  line-height: 30px !important;
 }
 
-.header-4-link:hover {
+.menu-link:hover {
   font-size: 20px !important;
   font-family: "poppins", sans-serif !important;
-  font-weight: 500 !important;
-  font-style: italic !important;
-  color: #ff8e8e !important;
-  text-decoration: none;
+  font-weight: 400 !important;
+  font-style: italic;
+  color: #000000 !important;
+  text-decoration: none !important;
+  line-height: 30px !important;
 }
 
-.project-link {
-  outline-style: none;
-}
-
-.project-link:hover {
-  outline-style: solid !important;
-  outline-color: #ffffff !important;
-  outline-width: medium !important;
-}
-
-.bg-dark {
-  background-color: #000000 !important;
-}
-
-.img-solid {
-  max-height: 350px;
-  width: auto;
-}
-
-@media (max-width: 992px) {
-  .img-solid {
-    max-height: 300px;
-  }
-}
-
-@media (max-width: 768px) {
-  .img-solid {
-    max-height: 250px;
-  }
-}
-
-@media (max-width: 576px) {
-  .img-solid {
-    max-height: 300px;
-  }
-}
-
-.sticky-top {
-  background-color: white;
+.border {
+  border-color: #000000 !important;
+  border-width: 2px !important;
 }
