--- a/style.css
+++ b/style.css
@@ -12,8 +12,16 @@
   font-family: "chromateregular", serif !important;
   font-weight: 400 !important;
   font-style: normal;
-  line-height: 1.5;
+  line-height: 1.3;
 
+}
+
+.header-4 {
+  font-size: 20px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 500 !important;
+  font-style: normal;
+  color: black;
 }
 
 .body-1 {
@@ -21,15 +29,24 @@
   font-family: "poppins", sans-serif !important;
   font-weight: 300 !important;
   font-style: normal;
-  color: white;
+  color: black;
 }
 
 .body-2 {
-  font-size: 15px !important;
+  font-size: 17px !important;
   font-family: "poppins", sans-serif !important;
   font-weight: 300 !important;
   font-style: normal;
-  color: #B8B8B8 !important;
+  color: #6E6E6E;
+}
+
+.body-3 {
+  font-size: 20px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 300 !important;
+  font-style: normal;
+  line-height: 1.5
+  color: black;
 }
 
 .menu-link {
