--- a/style.css
+++ b/style.css
@@ -16,6 +16,22 @@
 
 }
 
+.header-2 {
+  font-size: 36px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 400 !important;
+  font-style: normal;
+  color: black;
+}
+
+.header-3 {
+  font-size: 27px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 300 !important;
+  font-style: normal;
+  color: black;
+}
+
 .header-4 {
   font-size: 20px !important;
   font-family: "poppins", sans-serif !important;
@@ -69,7 +85,90 @@
   line-height: 30px !important;
 }
 
+.folio {
+  font-size: 11px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 300 !important;
+  font-style: normal;
+  color: #FFFFFF;
+}
+
 .border {
   border-color: #000000 !important;
   border-width: 2px !important;
+}
+
+.button {
+  text-decoration: none;
+  color: #000000;
+  font-size: 20px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 500 !important;
+  font-style: normal;
+  box-shadow: 0.25rem 0.25rem black;
+  transition: box-shadow 0.1s ease;
+}
+
+.button:hover, .button:focus{
+  box-shadow: 0.5rem 0.5rem black;
+  color: #000000;
+}
+
+.overlay-container {
+  position: relative;
+  width: 100%;
+}
+
+.overlay-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .3s ease;
+  background-color: #000000;
+}
+
+.overlay-container:hover .overlay {
+  opacity: 1;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay-text-primary {
+  color: white !important;
+  font-size: 25px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 300 !important;
+}
+
+.overlay-text-secondary {
+  color: white !important;
+  font-size: 18px !important;
+  font-family: "poppins", sans-serif !important;
+  font-weight: 300 !important;
+}
+
+.overlay-divider {
+  width: 30px;
+  height: 2px !important;
+  background-color: white;
+  opacity: 1;
 }
