All project mobile spacing

--- a/style.css
+++ b/style.css
@@ -224,6 +224,10 @@
   padding-left: 48px;
 }
 
+.padded-right-text {
+  padding-right: 48px;
+}
+
 @media (max-width: 767.98px) {
   .padded-text {
     max-width: 100%;
@@ -231,8 +235,16 @@
 }
 
 @media (max-width: 575.98px) {
-  .padded-left-text {
+  .padded-left-text, .padded-right-text {
     padding-left: 12px;
     padding-right: 12px;
   }
+}
+
+.pt-full {
+  padding-top: 72px !important;
+}
+
+.pt-partial {
+  padding-top: 22px !important;
 }
